# django-dashboard

./: .gitignore  README.md  pyproject.toml
dashboard/: __init__.py  apps.py  tasks.py  tests.py  urls.py  views.py
dashboard/admin/: __init__.py  admin.py
dashboard/api/: filters.py  permissions.py  serializers.py  urls.py  viewsets.py
dashboard/api/schema/: query.py  subscription.py
dashboard/channel/: consumers.py  routing.py
dashboard/management/commands/: dashboard.py
dashboard/migrations/: 0001_initial.py
dashboard/models/: defs.py  methods.py  models.py
dashboard/templates/dashboard/chat/: graphql.html  index.html  room.html
dashboard/templates/dashboard/notice/: index.html
samples/ui/: README.md
samples/ui/src/Layouts/Main/: index.tsx
samples/ui/src/Pages/: index.tsx
samples/ui/src/Pages/Top/: index.tsx
samples/ui/src/graphql/: index.tsx  schema.graphql
samples/ui/src/graphql/queries/: latestNotice.graphql
samples/web/accounts/: admin.py
samples/web/accounts/migrations/: 0001_initial.py  0002_auto_20200923_0952.py
samples/web/accounts/models/: defs.py  models.py
samples/web/api/: schema.py  urls.py
samples/web/app/: local_settings.dist.py  settings.py
tests/: test_dashboard.py
