[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
channels = "^2.4.0"
channels_redis = "^3.1.0"
django-click = {git = "https://github.com/GaretJax/django-click.git"}
markdown = "^3.2.2"
django-channels-graphql-ws = "^0.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
